--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     ================================================== -->
     <header class="container">
 
-      <h1>Design#Code</h1>
+      <h1 class="muted">Design#Code</h1>
 
     </header> <!-- /container -->
 
