--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="right pull-right canvas span4 fold"><img src="img/foldnotext.jpg" /></div>
         
         <div id="slideshow">
-          <div class="cycle-slideshow ss span6 offset3"
+          <div class="cycle-slideshow ss span4 offset4"
             data-cycle-fx="fadeOut"
             data-cycle-timeout="0"
             data-cycle-prev="#prev"
@@ -58,35 +58,47 @@
             data-cycle-slides="> div.slide"
             >
             <div class="slide">
-              <img src="img/ss/explain1.jpg"/>
+              <img src="img/openasic.jpg"/>
+              <p>Lorem Ipsum Dolor Sit Amet.</p>
+            </div>
+            <div class="slide">
+<!--               <img src="img/ss/explain1.jpg"/> -->
+              <img src="img/ss/explain-trans1.png"/>
               <p>Curabitur blandit tempus porttitor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Nullam quis risus eget urna mollis ornare vel eu leo. Maecenas sed diam eget risus varius blandit sit amet non magna. Sed posuere consectetur est at lobortis.</p>
             </div>
             <div class="slide">
-              <img src="img/ss/explain2.jpg"/>
+<!--               <img src="img/ss/explain2.jpg"/> -->
+              <img src="img/ss/explain-trans2.png"/>
               <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Curabitur blandit tempus porttitor. Maecenas faucibus mollis interdum.</p>
             </div>
             <div class="slide">
-              <img src="img/ss/explain3.jpg"/>
+<!--               <img src="img/ss/explain3.jpg"/> -->
+              <img src="img/ss/explain-trans3.png"/>
               <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
             </div>
             <div class="slide">
-              <img src="img/ss/explain4.jpg"/>
+<!--               <img src="img/ss/explain4.jpg"/> -->
+              <img src="img/ss/explain-trans4.png"/>
               <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Vestibulum id ligula porta felis euismod semper. Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Cras mattis consectetur purus sit amet fermentum.</p>
             </div>
             <div class="slide">
-              <img src="img/ss/explain5.jpg"/>
+<!--               <img src="img/ss/explain5.jpg"/> -->
+              <img src="img/ss/explain-trans5.png"/>
               <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Cras mattis consectetur purus sit amet fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
             </div>
             <div class="slide">
-              <img src="img/ss/explain6.jpg"/>
+<!--               <img src="img/ss/explain6.jpg"/> -->
+              <img src="img/ss/explain-trans6.png"/>
               <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
             </div>
             <div class="slide">
-              <img src="img/ss/explain7.jpg"/>
+<!--               <img src="img/ss/explain7.jpg"/> -->
+              <img src="img/ss/explain-trans7.png"/>
               <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Cras mattis consectetur purus sit amet fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
             </div>
             <div class="slide">
-              <img src="img/ss/explain9.jpg"/>
+<!--               <img src="img/ss/explain9.jpg"/> -->
+              <img src="img/ss/explain-trans8.png"/>
               <p>Maecenas faucibus mollis interdum. Nulla vitae elit libero, a pharetra augue.</p>
             </div>
           
