make <p> text darker

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <p>Maecenas faucibus mollis interdum. Nulla vitae elit libero, a pharetra augue.</p>
             </div>
           
-            <div class="cycle-pager"></div>
+<!--             <div class="cycle-pager"></div> -->
 
           </div>
   
