massive coding updates

--- a/index.html
+++ b/index.html
@@ -46,69 +46,231 @@
 
     <section class="container main">
       <div class="row">
+<!--
         <div class="left canvas span4 unfold"><img src="img/unfoldnotext.jpg" /></div>
         <div class="right pull-right canvas span4 fold"><img src="img/foldnotext.jpg" /></div>
+-->
         
         <div id="slideshow">
-          <div class="cycle-slideshow ss span4 offset4"
+          <div class="cycle-slideshow ss"
             data-cycle-fx="fadeOut"
             data-cycle-timeout="0"
             data-cycle-prev="#prev"
             data-cycle-next="#next"
             data-cycle-slides="> div.slide"
             >
-            <div class="slide">
-              <img src="img/openasic.jpg"/>
-              <p>Lorem Ipsum Dolor Sit Amet.</p>
+            <!-- OPEN graphic stuff -->
+            <!-- OPEN graphic stuff -->
+            <!-- OPEN graphic stuff -->
+            <div class="slide span12">
+              <div class="row toprow">
+                <img class="span4 offset4" src="img/openasic.jpg"/>
+              </div>
+              <div class="row bottomrow">
+                <p class="span4 offset4">This equation governs the value proposition of an entire class of <strong>industrial goods</strong>;</p>
+              </div>
             </div>
-            <div class="slide">
-<!--               <img src="img/ss/explain1.jpg"/> -->
-              <img src="img/ss/explain-trans1.png"/>
-              <p>Curabitur blandit tempus porttitor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Nullam quis risus eget urna mollis ornare vel eu leo. Maecenas sed diam eget risus varius blandit sit amet non magna. Sed posuere consectetur est at lobortis.</p>
+
+            <div class="slide span12">
+              <div class="row toprow">
+                <img class="span4 offset4" src="img/openasic.jpg"/>
+              </div>
+              <div class="row bottomrow">
+                <p class="span4 offset4">It determines success and failure in delivering the most complex of <strong>value propositions</strong>;</p>
+              </div>
             </div>
-            <div class="slide">
-<!--               <img src="img/ss/explain2.jpg"/> -->
-              <img src="img/ss/explain-trans2.png"/>
-              <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Curabitur blandit tempus porttitor. Maecenas faucibus mollis interdum.</p>
+
+            <div class="slide span12">
+              <div class="row toprow">
+                <img class="span4 offset4" src="img/openasic.jpg"/>
+              </div>
+              <div class="row bottomrow">
+                <p class="span4 offset4">It defines the form factor in which governments and commercial enterprises create value.</p>
+              </div>
             </div>
-            <div class="slide">
-<!--               <img src="img/ss/explain3.jpg"/> -->
-              <img src="img/ss/explain-trans3.png"/>
-              <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+
+            <div class="slide span12">
+              <div class="row toprow">
+                <img class="span4 offset4" src="img/openasic.jpg"/>
+              </div>
+              <div class="row bottomrow">
+                <p class="span4 offset4">Services</p>
+              </div>
             </div>
-            <div class="slide">
-<!--               <img src="img/ss/explain4.jpg"/> -->
-              <img src="img/ss/explain-trans4.png"/>
-              <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Vestibulum id ligula porta felis euismod semper. Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Cras mattis consectetur purus sit amet fermentum.</p>
+
+            <!-- start the all text portion -->
+            <!-- start the all text portion -->
+            <!-- start the all text portion -->
+            <div class="slide span12">
+              <div class="row toprow">
+                <p class="span4 offset4 lead">What is a service?</p>
+              </div>
+              <div class="row bottomrow">
+                <p class="span4 offset4">Beyond the obvious and superficial, when customers pay for a service, what are they really buying?</p>
+              </div>
             </div>
-            <div class="slide">
-<!--               <img src="img/ss/explain5.jpg"/> -->
-              <img src="img/ss/explain-trans5.png"/>
-              <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Cras mattis consectetur purus sit amet fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+
+            <div class="slide span12">
+              <div class="row toprow">
+                <p class="span4 offset4 lead">A guarantee that a particular set of outcomes & experiences will materialize within a particular space or time.</p>
+              </div>
+              <div class="row bottomrow">
+                <p class="span4 offset4">Services are post-industrial products; outcomes are the &ldquo;goods&rdquo; and experience is the packaging.</p>
+              </div>
             </div>
-            <div class="slide">
-<!--               <img src="img/ss/explain6.jpg"/> -->
-              <img src="img/ss/explain-trans6.png"/>
-              <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+
+            <!-- What makes some service enterprises thrive where others barely survive? -->
+            <div class="slide span12">
+              <div class="row toprow">
+                <p class="span4 offset4 lead">What makes some service enterprises thrive where others barely survive?</p>
+              </div>
+              <div class="row bottomrow">
+                <p class="span4 offset4">What gives some category leaders immunity from challengers?<br/>
+                  What gives some challengers the impunity to take on establishments?</p>
+              </div>
             </div>
-            <div class="slide">
-<!--               <img src="img/ss/explain7.jpg"/> -->
-              <img src="img/ss/explain-trans7.png"/>
-              <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Cras mattis consectetur purus sit amet fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+
+            <div class="slide span12">
+              <div class="row toprow">
+                <p class="span4 offset4 lead">What makes some service enterprises thrive where others barely survive?</p>
+              </div>
+              <div class="row bottomrow">
+                <p class="span4 offset4">They guarantee superior sets of outcomes & experiences in more attractive space-time combinations; at much lower cost to customers.</p>
+              </div>
             </div>
-            <div class="slide">
-<!--               <img src="img/ss/explain9.jpg"/> -->
-              <img src="img/ss/explain-trans8.png"/>
-              <p>Maecenas faucibus mollis interdum. Nulla vitae elit libero, a pharetra augue.</p>
+
+            <div class="slide span12">
+              <div class="row toprow">
+                <p class="span4 offset4 lead">What makes some service enterprises thrive where others barely survive?</p>
+              </div>
+              <div class="row bottomrow">
+                <p class="span4 offset4">Their services are hardier and more resistant to industry factors; costs & risks every player is exposed to.</p>
+              </div>
             </div>
-          
-<!--             <div class="cycle-pager"></div> -->
+
+            <div class="slide span12">
+              <div class="row toprow">
+                <p class="span4 offset4 lead">What makes some service enterprises thrive where others barely survive?</p>
+              </div>
+              <div class="row bottomrow">
+                <p class="span4 offset4">Think of design as &ldquo;genetic code.&rdquo; Superior design provides an unfair advantage they fully exploit.</p>
+              </div>
+            </div>
+            <!-- /END What makes some service enterprises thrive where others barely survive? -->
+
+            <div class="slide span12">
+              <div class="row toprow">
+                <p class="span4 offset4">Design is integral to the DNA of each and every public service. Design is not a matter of superficial appearance. <br/>
+                  How public services are 'designed' is central to their purpose, their function, their character. Design is the application of hard disciplines not soft furnishings. <br/>
+                  <span class=""><a href="#">&ldquo;Restarting Britain 2: Design and Public Services&rdquo;</a> A report by the Design Commission, UK, 2013.</span></p>
+              </div>
+              <div class="row bottomrow">
+                <p class="span4 offset4">What&rsquo;s true for public services and non-profits is most certainly true for commercial enterprises, with the additional burden of profitability.</p>
+              </div>
+            </div>
+
+            <div class="slide span12">
+              <div class="row toprow">
+                <p class="span4 offset4 lead">The business model is pitch perfect and the strategy is sound.<br/>
+                  Policy and legislation articulate what’s best in the public interest.<br/>
+                  What could possibly go wrong?</p>
+              </div>
+              <div class="row bottomrow">
+                <p class="span4 offset4">Outcomes - Price/Experience = Net Value</p>
+              </div>
+            </div>
+
+            <div class="slide span12">
+              <div class="row toprow">
+                <p class="span4 offset4 lead">[GRAPHIC TO COME]</p>
+              </div>
+              <div class="row bottomrow">
+                <p class="span4 offset4">Expected value fails to materialize in the particular outcome-experience form factor within a particular space or time; customers end up paying a much higher price, especially when the service is &ldquo;free.&rdquo;</p>
+              </div>
+            </div>
+
+            <div class="slide span12">
+              <div class="row toprow">
+                <p class="span4 offset4 lead">How to ensure business model and strategy are faithfully reproduced in design?<br/>
+                  How to ensure the best intentions of policymakers and cabinets aren’t nullified by ground realities?</p>
+              </div>
+              <div class="row bottomrow">
+                <p class="span4 offset4">Code it.</p>
+              </div>
+            </div>
+
+            <div class="slide span12">
+              <div class="row toprow">
+                <p class="span4 offset4 lead">How to ensure business model and strategy are faithfully reproduced in design?<br/>
+                  How to ensure the best intentions of policymakers and cabinets aren’t nullified by ground realities?</p>
+              </div>
+              <div class="row bottomrow">
+                <p class="span4">&ldquo;Instead of &hellip; blueprints &hellip;there is something that better represents what we should be designing going forward: genetic code &hellip; an &lsquo;instruction set&rsquo; &hellip; the idea that code is only the beginning of something: it sets off a series of behaviours, but you can&rsquo;t know the ultimate outcome in advance.&rdquo;</p>
+                <p class="span4">From <a href="#">Blueprint to Genetic Code: The Merits of an Evolutionary Approach to Design</a> <br/>
+                  Tim Brown, CEO of IDEO Rotman Magazine, Spring 2012</p>
+                <p class="span4">&ldquo;While most of us don&rsquo;t understand how to work with genetic code, we have already begun to understand how to work with &hellip; software code. The design and engineering of software has changed quite radically &hellip; a metaphor for how we as designers need to &hellip; work going forward.&rdquo;</p>
+              </div>
+            </div>
+
+            <div class="slide span12">
+              <div class="row toprow">
+                <p class="span4 offset4 lead">Think of service design as code that every layer and unit in the enterprise reads, interprets and executes.</p>
+              </div>
+            </div>
+            <!-- END the all text portion -->
+            <!-- END the all text portion -->
+            <!-- END the all text portion -->
+
+            <!-- start CANVASES portion -->
+            <!-- start CANVASES portion -->
+            <!-- start CANVASES portion -->
+            <div class="slide span12">
+              <div class="row toprow">
+                <p class="span4 offset4 lead">Canvas. <br/>
+                  Code. <br/>
+                  Content.</p>
+              </div>
+            </div>
+
+            <div class="slide span12">
+              <div class="row toprow">
+                <p class="span4 lead">[UNFOLD]</p>
+                <p class="span4 lead">[ICON CHART]</p>
+                <p class="span4 lead">[FOLD]</p>
+              </div>
+              <div class="row bottomrow">
+                <p class="span4">Like design spreadsheets, the canvases passively generate the design of a service product, in the form of an instruction set or pseudo code, that teams can implement. Encoded in the design are the business model and strategy.</p>
+                <p class="span4">design#code combines the tradition of industrial design with the tradecraft of strategy, to generate superior designs in fast cycles. The canvases embed a sophisticated design logic, based on economics, industrial engineering and organization science.</p>
+                <p class="span4">While the logic ensures the design is neither simplistic not superficial, filling the canvases with ideas, observations and insight can be as simple as having a whiteboard discussion, a friendly chat or a spirited argument at a table.</p>
+              </div>
+            </div>
+
+            <div class="slide span12">
+              <div class="row toprow">
+                <p class="span4 lead">[CODE chart]</p>
+                <p class="span4 lead">[ICON CHART]</p>
+                <p class="span4 lead">[COLORED POST-IT CHART]</p>
+              </div>
+              <div class="row bottomrow">
+                <p class="span4"><strong>12 Design Arguments</strong><br/>
+                  There are two sides to each argument; one from each Perspective</p>
+                <p class="span4"><strong>Design Input</strong><br/>
+                  Ideas, observations and insight, as and when they occur, to who them occur.</p>
+                <p class="span4"><strong>32 Design Functions</strong><br/>
+                  For a rich and complete design that covers every aspect of the service genome.</p>
+              </div>
+            </div>
+
+            <!-- PAGER @ THE BOTTOM -->
+            <!-- PAGER @ THE BOTTOM -->
+            <!-- PAGER @ THE BOTTOM -->
+            <div class="cycle-pager span6 offset3"></div>
 
           </div>
   
-          <div class="span12">
-            <a href=# id="prev" class="">&laquo;</a> 
-            <a href=# id="next" class="pull-right">&raquo;</a>
+          <div class="span12 slidenav">
+            <a href=# id="prev" class="slidenav">&laquo;</a> 
+            <a href=# id="next" class="slidenav pull-right">&raquo;</a>
           </div>
 
         </div>
