making slideshow order clearer

--- a/index.html
+++ b/index.html
@@ -62,34 +62,24 @@
                 <img class="span4 offset4" src="img/openasic.jpg"/>
               </div>
               <div class="row bottomrow">
-                <p class="span4 offset4">This equation governs the value proposition of an entire class of <strong>industrial goods</strong>;</p>
+                <p class="span4">This equation governs the value proposition of an entire class of <strong>industrial goods</strong>;</p>
+                <p class="span4">It determines success and failure in delivering the most complex of <strong>value propositions</strong>;</p>
+                <p class="span4">It defines the form factor in which governments and commercial enterprises create value.</p>
               </div>
             </div>
+            <!-- END OPEN graphic stuff -->
+            <!-- END OPEN graphic stuff -->
+            <!-- END OPEN graphic stuff -->
 
+            <!-- SERVICES -->
+            <!-- SERVICES -->
+            <!-- SERVICES -->
             <div class="slide span12">
               <div class="row toprow">
                 <img class="span4 offset4" src="img/openasic.jpg"/>
               </div>
               <div class="row bottomrow">
-                <p class="span4 offset4">It determines success and failure in delivering the most complex of <strong>value propositions</strong>;</p>
-              </div>
-            </div>
-
-            <div class="slide span12">
-              <div class="row toprow">
-                <img class="span4 offset4" src="img/openasic.jpg"/>
-              </div>
-              <div class="row bottomrow">
-                <p class="span4 offset4">It defines the form factor in which governments and commercial enterprises create value.</p>
-              </div>
-            </div>
-
-            <div class="slide span12">
-              <div class="row toprow">
-                <img class="span4 offset4" src="img/openasic.jpg"/>
-              </div>
-              <div class="row bottomrow">
-                <p class="span4 offset4">Services</p>
+                <h2 class="span4 offset4 text-success">It Defines Quality Services...</h2>
               </div>
             </div>
 
@@ -110,7 +100,7 @@
                 <p class="span4 offset4 lead">A guarantee that a particular set of outcomes & experiences will materialize within a particular space or time.</p>
               </div>
               <div class="row bottomrow">
-                <p class="span4 offset4">Services are post-industrial products; outcomes are the &ldquo;goods&rdquo; and experience is the packaging.</p>
+                <p class="span4 offset4">Services are post-industrial products; outcomes are the &ldquo;goods&rdquo; and experience is the &ldquo;packaging.&rdquo;</p>
               </div>
             </div>
 
@@ -292,6 +282,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="http://malsup.github.io/min/jquery.cycle2.min.js"></script>
+    <script src="http://jquery.malsup.com/cycle2/jquery.cycle2.center.js"></script>
     <script src="http://cdn.s3.ookb.co/bootstrap/js/bootstrap.js"></script>
 
     <!-- custom OOKB styles added on top -->
