updating the codebase, writing new styles, tweaking HTML to show “better” arrangement

--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@
             <!-- OPEN graphic stuff -->
             <!-- OPEN graphic stuff -->
             <!-- OPEN graphic stuff -->
-            <div class="slide span12">
+            <div class="slide span12 first">
               <div class="row toprow">
                 <img class="span4 offset4" src="img/openasic.jpg"/>
               </div>
               <div class="row bottomrow">
+                <!-- need to find a way to animate these on; then highlight the ÒnextÓ arrow -->
                 <p class="span4">This equation governs the value proposition of an entire class of <strong>industrial goods</strong>;</p>
                 <p class="span4">It determines success and failure in delivering the most complex of <strong>value propositions</strong>;</p>
                 <p class="span4">It defines the form factor in which governments and commercial enterprises create value.</p>
@@ -79,9 +80,12 @@
                 <img class="span4 offset4" src="img/openasic.jpg"/>
               </div>
               <div class="row bottomrow">
-                <h2 class="span4 offset4 text-success">It Defines Quality Services...</h2>
+                <h2 class="span4 offset4 text-success">Services...</h2>
               </div>
             </div>
+            <!-- END SERVICES -->
+            <!-- END SERVICES -->
+            <!-- END SERVICES -->
 
             <!-- start the all text portion -->
             <!-- start the all text portion -->
@@ -105,40 +109,22 @@
             </div>
 
             <!-- What makes some service enterprises thrive where others barely survive? -->
+            <!-- treat this area like the initial OPEN section -->
             <div class="slide span12">
               <div class="row toprow">
                 <p class="span4 offset4 lead">What makes some service enterprises thrive where others barely survive?</p>
               </div>
               <div class="row bottomrow">
-                <p class="span4 offset4">What gives some category leaders immunity from challengers?<br/>
+                <p class="span4">What gives some category leaders immunity from challengers?<br/>
                   What gives some challengers the impunity to take on establishments?</p>
+                <p class="span4">They guarantee superior sets of outcomes & experiences in more attractive space-time combinations; at much lower cost to customers.</p>
+                <p class="span4">Their services are hardier and more resistant to industry factors; costs & risks every player is exposed to.</p>
               </div>
             </div>
 
             <div class="slide span12">
               <div class="row toprow">
-                <p class="span4 offset4 lead">What makes some service enterprises thrive where others barely survive?</p>
-              </div>
-              <div class="row bottomrow">
-                <p class="span4 offset4">They guarantee superior sets of outcomes & experiences in more attractive space-time combinations; at much lower cost to customers.</p>
-              </div>
-            </div>
-
-            <div class="slide span12">
-              <div class="row toprow">
-                <p class="span4 offset4 lead">What makes some service enterprises thrive where others barely survive?</p>
-              </div>
-              <div class="row bottomrow">
-                <p class="span4 offset4">Their services are hardier and more resistant to industry factors; costs & risks every player is exposed to.</p>
-              </div>
-            </div>
-
-            <div class="slide span12">
-              <div class="row toprow">
-                <p class="span4 offset4 lead">What makes some service enterprises thrive where others barely survive?</p>
-              </div>
-              <div class="row bottomrow">
-                <p class="span4 offset4">Think of design as &ldquo;genetic code.&rdquo; Superior design provides an unfair advantage they fully exploit.</p>
+                <p class="span4 offset4 lead">Think of design as &ldquo;genetic code.&rdquo; Superior design provides an unfair advantage they fully exploit.</p>
               </div>
             </div>
             <!-- /END What makes some service enterprises thrive where others barely survive? -->
