hiding Tim Brown quote

--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
               </div>
             </div>
 
+<!-- remove this, not really helpful... just takes up space
             <div class="slide span12">
               <div class="row toprow">
                 <p class="span4 offset4 lead">How to ensure business model and strategy are faithfully reproduced in design?<br/>
@@ -182,6 +183,7 @@
                 <p class="span4">&ldquo;While most of us don&rsquo;t understand how to work with genetic code, we have already begun to understand how to work with &hellip; software code. The design and engineering of software has changed quite radically &hellip; a metaphor for how we as designers need to &hellip; work going forward.&rdquo;</p>
               </div>
             </div>
+-->
 
             <div class="slide span12">
               <div class="row toprow">
