improving the JS loading of stuff upfront

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
               </div>
               <div class="row bottomrow">
                 <!-- need to find a way to animate these on; then highlight the ÒnextÓ arrow -->
-                <p class="span4">This equation governs the value proposition of an entire class of <strong>industrial goods</strong>;</p>
-                <p class="span4">It determines success and failure in delivering the most complex of <strong>value propositions</strong>;</p>
-                <p class="span4">It defines the form factor in which governments and commercial enterprises create value.</p>
+                <p class="span4 fadein animate one">This equation governs the value proposition of an entire class of <strong>industrial goods</strong>;</p>
+                <p class="span4 fadein animate two">It determines success and failure in delivering the most complex of <strong>value propositions</strong>;</p>
+                <p class="span4 fadein animate three">It defines the form factor in which governments and commercial enterprises create value.</p>
               </div>
             </div>
             <!-- END OPEN graphic stuff -->
@@ -80,7 +80,7 @@
                 <img class="span4 offset4" src="img/openasic.jpg"/>
               </div>
               <div class="row bottomrow">
-                <h2 class="span4 offset4 text-success">Services...</h2>
+                <h2 class="span4 offset4 text-success">Services</h2>
               </div>
             </div>
             <!-- END SERVICES -->
