cleaning up old comments in CSS

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
             <!-- OPEN graphic stuff -->
             <div class="slide span12 first">
               <div class="row toprow">
-                <img class="span4 offset4" src="img/openasic.jpg"/>
+                <img class="span4" src="img/openasic.jpg"/>
+                <img class="span4" src="img/openasic.jpg"/>
+                <img class="span4" src="img/openasic.jpg"/>
               </div>
               <div class="row bottomrow">
                 <!-- need to find a way to animate these on; then highlight the ÒnextÓ arrow -->
