--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
             <!-- Logic basics! -->
             <div class="slide span12">
               <div class="row toprow">
-                <p class="span4">[IMG TK]</p>
-                <p class="span4">[IMG TK]</p>
-                <p class="span4">[IMG TK]</p>
+                <img class="span4" src="img/ss/explain-trans1.png"/>
+                <img class="span4" src="img/ss/explain-trans8.png"/>
+                <img class="span4" src="img/ss/explain-trans3.png"/>
               </div>
               <div class="row bottomrow">
                 <p class="span4"><strong>Everybody can code</strong> <br/>Punched cards and paper tape were once used to write computer code. Of course, not everybody could program a computer. <br/>Imagine a new kind of code using Post-It Notes®, making programmers out of Army officers and physicians; field agents, supervisors and technicians; postal workers and flight attendants; the policymaker and the legislator.</p>
@@ -186,9 +186,9 @@
             <!-- ARguments and perspectives -->
             <div class="slide span12">
               <div class="row toprow">
-                <p class="span4">[IMG TK]</p>
-                <p class="span4">[IMG TK]</p>
-                <p class="span4">[IMG TK]</p>
+                <img class="span4" src="img/ss/explain-trans3.png"/>
+                <img class="span4" src="img/ss/explain-trans6.png"/>
+                <img class="span4" src="img/ss/explain-trans8.png"/>
               </div>
               <div class="row bottomrow">
                 <p class="span4"><strong>32 Design Functions</strong> <br/>Describe every aspect of a service in terms of structure and behaviour; they define the service genome.</p>
@@ -203,9 +203,9 @@
             <!-- Canvases / Good Design Fast -->
             <div class="slide span12">
               <div class="row toprow">
-                <p class="span4">[Unfold Canvas]</p>
-                <p class="span4">[IMG TK]</p>
-                <p class="span4">[Fold Canvas]</p>
+                <img class="span4" src="img/unfoldnotext.jpg"/>
+                <img class="span4" src="img/ss/explain-trans8.png"/>
+                <img class="span4" src="img/foldnotext.jpg"/>
               </div>
               <div class="row bottomrow">
                 <h3 class="span12">Good design, fast&trade;</h3>
@@ -220,9 +220,9 @@
             <!-- SECTION 6 -->
             <!-- Canvases / Closeup / Examine the logic threads -->
             <div class="slide span12">
-              <div class="row toprow">
-                <p class="span8">[Unfold Canvas Zoom]</p>
-                <p class="span4">[Logic Thread Graphic]</p>
+              <div class="row toprow graybg">
+                <img class="span8" src="img/unfoldnotext.jpg"/>
+                <img class="span4" src="img/ss/explain-trans2.png"/>
               </div>
               <div class="row bottomrow">
                 <h3 class="span12">Raising the bar by lowering the barrier&trade;</h3>
