removing contact info, deemed unneccessary

--- a/index.html
+++ b/index.html
@@ -303,15 +303,7 @@ through readily integrate multiple perspectives and lines of inquiry; help teams
     <hr class="container add-top add-bottom" />
     
     <footer class="container">
-      <p class="pull-right"><small>&copy;2013 Design#Code</small></p>
-      <p class="">
-        <small>
-        Design#Code LLC<br/>
-        Any Contact info required?<br/>
-        XX TK<br/>
-        XX TK<br/>
-        </small>
-      </p>
+      <p class="pull-right"><small>&copy;2013 Design#Code LLC</small></p>
     </footer>
 
     <!-- Le javascript
