adding 3 more images

--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
             <!-- ARguments and perspectives -->
             <div class="slide span12" data-cycle-hash="four">
               <div class="row toprow">
-                <img class="span4" src="img/ss/explain-trans3.png"/>
-                <img class="span4" src="img/ss/explain-trans6.png"/>
-                <img class="span4" src="img/ss/explain-trans8.png"/>
+                <img class="span4" src="img/4postitsandcode.png"/>
+                <img class="span4" src="img/5justcode.png"/>
+                <img class="span4" src="img/6codeandicons.png"/>
               </div>
               <div class="row bottomrow">
                 <p class="span4"><strong>32 Design Functions</strong> <br/>Describe every aspect of a service in terms of structure and behaviour; they define the service genome.</p>
