adding some additional classes for adjusted view

--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
             <!-- Canvases / Good Design Fast -->
             <div class="slide span12" data-cycle-hash="five">
               <div class="row toprow">
-                <img class="span4" src="img/unfoldicon.png"/>
-                <img class="span4" src="img/ss/explain-trans8.png"/>
-                <img class="span4" src="img/foldicon.png"/>
+                <img class="span4 sizeadjust canvas unfold" src="img/unfoldicon.png"/>
+                <img class="span4" src="img/6codeandicons.png"/>
+                <img class="span4 sizeadjust canvas fold" src="img/foldicon.png"/>
               </div>
               <div class="row bottomrow">
                 <h3 class="span12">Good design, fast&trade;</h3>
