great new styling. Many new images added

--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
                       <p>This equation governs the value an entire class of goods;</p>
                     </div>
                     <div class="slide">
-                      <p class="purplebg lead">The distinction between goods and services is a deeply-ingrained fallacy.</p>
+                      <p class="purplebg lead postit">The distinction between goods and services is a deeply-ingrained fallacy.</p>
                       <p>Beyond the obvious and superficial, when customers pay for a service, aren&rsquo;t they paying for &ldquo;goods?&rdquo; It&rsquo;s time to right a wrong.</p>
                     </div>
                     <div class="slide">
-                      <p class="bluebg lead">Services deliver particular outcomes and experiences when and where needed.</p>
+                      <p class="bluebg lead postit">Services deliver particular outcomes and experiences when and where needed.</p>
                       <p>Think of the many ways to pay for something or getting somewhere. <br/>Outcomes are the “goods” and experience is the “packaging”. <br/>Post-industrial goods, or PIGS.</p>
                     </div>
                     <div class="slide">
-                      <p class="greenbg lead">Services are guaranteed sets of outcomes & experiences; delivered by the rendering of a customer asset, or the renting of a resource; within a particular space, time or platform.</p>
+                      <p class="greenbg lead postit">Services are guaranteed sets of outcomes & experiences; delivered by the rendering of a customer asset, or the renting of a resource; within a particular space, time or platform.</p>
                       <p>Outcomes – <br/>Price/Experience = <br/>Net Value <br/><br/>O-P/E=N <br/><br/>P/E = Total Cost of Utilization, or TCU</p>
                     </div>
                     <!-- pager! -->
@@ -102,15 +102,15 @@
                       <p class="">It determines success in delivering complex value propositions;</p>
                     </div>
                     <div class="slide">
-                      <p class="purplebg lead">Why do some services flourish and others, forgive the pun, flounder?</p>
+                      <p class="purplebg lead postit">Why do some services flourish and others, forgive the pun, flounder?</p>
                       <p class="">What gives some category leaders immunity from challengers? <br/>What gives some challengers the impunity to take on establishments?</p>
                     </div>
                     <div class="slide">
-                      <p class="bluebg lead">Their services are hardier and more resistant to industry factors; costs & risks every player is exposed to.</p>
+                      <p class="bluebg lead postit">Their services are hardier and more resistant to industry factors; costs & risks every player is exposed to.</p>
                       <p class="">Superior design provides an unfair advantage they fully exploit. Think of design as genetic code.</p>
                     </div>
                     <div class="slide">
-                      <p class="greenbg lead">They package and deliver outcomes better than others; making sure that the quality of experience is not just a matter of users feeling good.</p>
+                      <p class="greenbg lead postit">They package and deliver outcomes better than others; making sure that the quality of experience is not just a matter of users feeling good.</p>
                       <p class="">Outcomes – <br/>Price/Experience = <br/>Net Value <br/><br/>O-P/E=N <br/><br/>P/E = Total Cost of Utilization, or TCU</p>
                     </div>
                     <!-- pager! -->
@@ -133,15 +133,15 @@
                       <p>It shapes business strategy and government policy;</p>
                     </div>
                     <div class="slide">
-                      <p class="purplebg lead">The business model is pitch perfect and the strategy is sound. <br/>Government policy is clear about about what’s best in the public interest.</p>
+                      <p class="purplebg lead postit">The business model is pitch perfect and the strategy is sound. <br/>Government policy is clear about about what’s best in the public interest.</p>
                       <p>How do you make sure policy and strategy won’t fall flat in implementation and operation?</p>
                     </div>
                     <div class="slide">
-                      <p class="bluebg lead">Every layer and unit in the enterprise should correctly read, interpret and execute policy and strategy.</p>
+                      <p class="bluebg lead postit">Every layer and unit in the enterprise should correctly read, interpret and execute policy and strategy.</p>
                       <p>Design is an expression of policy and strategy in the form of code; we know good code makes all the difference.</p>
                     </div>
                     <div class="slide">
-                      <p class="greenbg lead">Good design reduces the risk the expected value fails to materialize. <br/>Great design creates unexpected value with superior outcomes and experiences at a lower cost.</p>
+                      <p class="greenbg lead postit">Good design reduces the risk the expected value fails to materialize. <br/>Great design creates unexpected value with superior outcomes and experiences at a lower cost.</p>
                       <p>Outcomes – <br/>Price/Experience = <br/>Net Value <br/><br/>O-P/E=N <br/><br/>P/E = Total Cost of Utilization, or TCU</p>
                     </div>
                     <!-- pager! -->
@@ -202,10 +202,10 @@
             <!-- SECTION 5 -->
             <!-- Canvases / Good Design Fast -->
             <div class="slide span12" data-cycle-hash="five">
-              <div class="row toprow">
-                <img class="span4 sizeadjust canvas unfold" src="img/unfoldicon.png"/>
+              <div class="row toprow sizeadjust">
+                <img class="span4 canvas unfold" src="img/unfoldicon.png"/>
                 <img class="span4" src="img/6codeandicons.png"/>
-                <img class="span4 sizeadjust canvas fold" src="img/foldicon.png"/>
+                <img class="span4 canvas fold" src="img/foldicon.png"/>
               </div>
               <div class="row bottomrow">
                 <h3 class="span12">Good design, fast&trade;</h3>
@@ -221,8 +221,8 @@
             <!-- Canvases / Closeup / Examine the logic threads -->
             <div class="slide span12" data-cycle-hash="six">
               <div class="row toprow graybg">
-                <img class="span8" src="img/unfoldnotext.jpg"/>
-                <img class="span4" src="img/ss/explain-trans2.png"/>
+                <img class="span8" src="img/unfoldpiece.png"/>
+                <img class="span4" src="img/logicthread.png"/>
               </div>
               <div class="row bottomrow">
                 <h3 class="span12">Raising the bar by lowering the barrier&trade;</h3>
