starting to do some real design things

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Header!
     ================================================== -->
     <header class="container">
-      <h1 class="muted">Design#Code</h1>
+      <h1 class="muted"><span class="one">design</span>#<span class="two">code</span></h1>
     </header> <!-- /container -->
 
     <!-- Main Page Contents!
@@ -158,7 +158,7 @@
             <!-- EINSTEIN QUOTE! -->
             <div class="slide span12" data-cycle-hash="two">
               <div class="row toprow">
-                <h2 class="span8 offset2"><blockquote>&ldquo;If at first, the idea is not absurd, then there is no hope for it.&rdquo;</blockquote></h2>
+                <h2 class="span8 offset2 bigquote">&ldquo;If at first, the idea is not absurd, then there is no hope for it.&rdquo;</h2>
                 <p class="span8 offset2">Albert Einstein</p>
               </div>
             </div>
